Estudo de formularios tabelas e um pouco de css

--- a/TagsDeFormatacaodetexto.html
+++ b/TagsDeFormatacaodetexto.html
@@ -19,7 +19,7 @@
     <!-- <blockquote>: citação -->
     <!-- <sup>: sobre escrito -->
     <!-- <sub>: sub escrito -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Alias</strong> <i>laborum</i> <u>sit</u> <s>fugit</s> <mark>distinctio molestias voluptate</mark> harum blanditiis ducimus provident repellat dolorem dicta, facere quis maxime fuga <code>libero</code> nam facilis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Alias</strong> <i>laborum</i> <span class ="underline">sit</span> <s>fugit</s> <mark>distinctio molestias voluptate</mark> harum blanditiis ducimus provident repellat dolorem dicta, facere quis maxime fuga <code>libero</code> nam facilis.</p>
     <pre>
         printf("hello word");
     </pre>
